--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,24 +4,16 @@ configuration: Release
 platform: Any CPU
 dotnet_csproj:
   patch: true
-  file: 'ExtendedVersion\*.csproj'
+  file: '**\*.csproj'
   version: '{version}'
   package_version: '{version}'
   assembly_version: '{version}'
   file_version: '{version}'
   informational_version: '{version}-$(APPVEYOR_REPO_COMMIT)'
-before_build:
-  - ps: nuget restore
-build:
-  project: ExtendedVersion.sln
+build_script:
+  - cmd: dotnet publish
 artifacts:
-- path: '*.nupkg'
-  name: nuget_package
-deploy:
-  - provider: NuGet
-    api_key:
-      secure: 7iJJVXMbGnaDbwumUb6NlYmNBXhHWYEON8qv17eEsCPySOJ+ngrj7N29rpy/BKc9
-    skip_symbols: false
-    artifact: nuget_package
-    on:
-      branch: master
+ - path: 'ExtendedVersion\bin\Debug\netcoreapp1.1\publish'
+   name: ExtendedVersion
+   type: WebDeployPackage
+deploy: off
