--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,9 +11,9 @@ dotnet_csproj:
   file_version: '{version}'
   informational_version: '{version}-$(APPVEYOR_REPO_COMMIT)'
 build_script:
-  - cmd: dotnet publish
+  - cmd: dotnet publish -c Release
 artifacts:
- - path: 'ExtendedVersion\bin\Debug\netcoreapp1.1\publish'
+ - path: 'ExtendedVersion\bin\Debug\netcoreapp2.1\publish'
    name: ExtendedVersion
    type: WebDeployPackage
 deploy: off
