--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,7 +15,7 @@ before_build:
 build_script:
   - cmd: dotnet publish -c Release
 artifacts:
- - path: '\src\bin\Release\netcoreapp2.2\publish'
+ - path: '.\ExtendedVersion\bin\Release\netcoreapp2.1\publish'
    name: ExtendedVersion
    type: WebDeployPackage
 deploy: off
